# touch.py

./: README.md  setup.cfg  setup.py
tests/examples/: touch(__file__).py
tests/touch/examples/: fullpath.py  touch(None).py
touch/: __init__.py
