# https://pypi.org/project/setupcfg-generator/
[metadata]
name = touch
version = 2019.4.13
url = https://github.com/looking-for-a-job/touch.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = touch file

[options]
install_requires = 
	public
	setuptools
	values
packages = 
	touch
